--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=airline_reservation_system
+spring.datasource.username=postgres
+spring.datasource.password=123456789
